# healthcraft

./: .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  app.py  fly.toml  pyproject.toml  requirements-lock.txt  requirements.txt  vercel.json
.claude/: settings.json
.claude/commands/: author-task.md  build-entity.md  build-tool.md  review-clinical.md
.claude/rules/: agents.md
.github/: CODEOWNERS
.github/workflows/: docker-build.yml  integration.yml  lint.yml  tests.yml  whitepaper.yml
api/: mcp.py
configs/: em_vocab.yaml  mcp-tools.json
configs/agents_assemble/: coverage_matrix.yaml
configs/rubrics/: default.yaml  v10_deterministic_overlay.yaml  v10_skipped.yaml  v11_consensus_overlay.yaml  v9_deterministic_overlay.yaml  v9_migrations_proposed.yaml
configs/schemas/: task.schema.json  world_config.schema.json
configs/world/: mercy_point_v1.yaml
demo/: README.md  chest_pain_bundle.json
docker/: docker-compose.yaml
docker/mcp-server/: Dockerfile
docker/task-engine/: Dockerfile  run_eval.sh
docker/world-state/: Dockerfile  init.sql
docs/: ARCHITECTURE.md  COMPLIANCE.md  CORECRAFT_ATTRIBUTION.md  ENTITY_MAPPING.md  EVALUATE_YOUR_MODEL.md  EVALUATION_FINDINGS.md  EVALUATION_INTEGRITY.md  EVALUATION_INTEGRITY_HARDENING.md  JUDGE_RELIABILITY.json  JUDGE_RELIABILITY.md  JUDGE_VALIDATION.md  LEADERBOARD.md  NEG_SMOKE_PILOT.md  ORACLE_VALIDATION.md  PAPER_REVISION_NOTES.md  POC_VALIDATOR_EXTENSION.md  PRE_DEPLOYMENT_CHECKLIST.md  RUBRIC_DESIGN.md  SAFETY_INVARIANTS_PILOT.md  SAFETY_TAXONOMY.json  SAFETY_TAXONOMY.md  SECURITY_REVIEW_v0.1.1.md  SHORTCOMINGS_AUDIT.md  TASKSET_EXPANSION_PLAN.md  TASK_DESIGN.md  TASK_EXPANSION_ROADMAP.md  TOOL_MAPPING.md  V6_AUDIT_FINDINGS.md  V7_ANALYSIS.json  V7_ANALYSIS.md  V8_ANALYSIS.json  V8_ANALYSIS.md  V9_OVERLAY_AUDIT.json  V9_OVERLAY_AUDIT.md
docs/MODEL_CARDS/: claude_opus_4_6.md  gemini_3_1_pro.md  gpt_5_4.md
docs/whitepaper/: .gitignore  Makefile  README.md  appendix.tex  build_anonymous.tex  build_named.tex  canonical_numbers.md  content.tex  metadata.tex  references.bib
evals/: healthcraft_simple_eval.py
results/: index.yaml
scripts/: agreement_report.py  analyze_results.py  analyze_shadow_log.py  analyze_v7.py  build_adjudication_batch.py  build_consensus.py  build_hard.py  build_huggingface_release.py  compare_baseline.py  compare_pilots.py  coverage_matrix.py  freeze_goldens.py  fuzz_agents_assemble.py  generate_paper_figures.py  judge_prompt_ab.py  judge_reliability.py  kappa_validation.py  load_smart_sandbox.py  loop_iteration.sh  migrate_criteria.py  oracle_batch.py  oracle_cc001.py  populate_v9_overlay.py  preflight.py  propose_overlay_entries.py  regen_leaderboard.py  rescore_v10.py  rescore_v7.py  safety_taxonomy.py  smoke_test.py  validate_agents_assemble.py  verify_canonical_numbers.py  verify_v2_claims.py
src/healthcraft/: __init__.py  __main__.py  cli.py  eval_runner.py  trajectory.py
system-prompts/: base.txt  mercy_point.txt  policies.txt  tool_reference.txt
tests/: conftest.py  test_eval_runner.py  test_integration_microeval.py  test_migrate_criteria.py  test_trajectory.py
tests/test_agents_assemble/: test_cds_hooks_server.py  test_coverage_matrix.py  test_e2e_workflow.py  test_excellence_audit.py  test_extended_rules_breadth.py  test_fuzz.py  test_governance.py  test_non_additive_strategies.py  test_reasoner_audit.py  test_scoring_strategies.py  test_smoke.py  test_streamable_http.py
tests/test_entities/: test_clinical_tasks.py  test_decision_rules.py  test_encounters.py  test_insurance.py  test_patients.py  test_protocols.py  test_reference_materials.py  test_regulatory.py  test_resources.py  test_supplies.py  test_transfers.py  test_treatment_plans.py
tests/test_evaluator/: test_invariants_mw_011.py  test_invariants_scj_006.py  test_shadow.py
tests/test_evaluator_integrity/: __init__.py  test_audit_log_invariants.py  test_consensus_contract.py  test_golden_trajectory_replay.py  test_hard_contract.py  test_missing_entity_links.py  test_prompt_composition.py  test_schema_handler_contract.py  test_task_satisfiability.py  test_v10_smoke.py  test_v11_smoke.py  test_v9_smoke.py
tests/test_judge/: __init__.py  test_judge_fairness.py  test_judge_parser.py  test_judge_v2_prompt.py  (+3 more)
(+345 files in other folders)
